--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  </head>
+  <title>RedAlex50 25/1</title>
+</head>
 <body>
-  <img src="img.PNG">
-  <img src="img2.PNG">
-  <img src="img3.PNG">
+  <img src="img1.png">
+  <img src="img2.png">
+  <img src="img3.png">
+  <img src="img4.png">
 </body>
 </html>
