--- a/t2/index.html
+++ b/t2/index.html
@@ -7,6 +7,8 @@
     <title>TASK2</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique cupiditate ea iusto sapiente obcaecati provident animi mollitia voluptatibus quae illum quo omnis consectetur aspernatur eligendi praesentium veritatis, quam ullam quos.
+    <img src="img1.png" alt="img1">
+    <img src="img2.png" alt="img2">
+    <img src="img3.png" alt="img3">
 </body>
 </html>
