--- a/t2/index.html
+++ b/t2/index.html
@@ -7,8 +7,25 @@
     <title>TASK2</title>
 </head>
 <body>
+    1.
     <img src="img1.png" alt="img1">
+    <br>
+    2.
     <img src="img2.png" alt="img2">
+    <br>
+    3.
     <img src="img3.png" alt="img3">
+    <br>
+    4.
+    <img src="img4.png" alt="img4">
+    <br>
+    5.
+    <img src="img5.png" alt="img5">
+    <br>
+    6.
+    <img src="img6.png" alt="img6">
+    <br>
+    7.
+    <img src="img7.png" alt="img7">
 </body>
 </html>
